2000-11-25  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_conf.c (read_conf_file): Make mod_counter static to
	preserve value over different gconv-modules files.

2000-11-24  Ulrich Drepper  <drepper@redhat.com>

	* locale/findlocale.c: Add casts to avoid warnings.
	* locale/localeinfo.h (LIMAGIC): Add cast to avoid warnings.
	* misc/efgcvt_r.c (fcvt_r): Use ssize_t instead of int and add cast
	to avoid warnings.
	* misc/tsearch.c (const_node): New type.
	(trecurse): Correct casts to avoid warnings.
	(__twalk): Likewise.
	* stdlib/tst-limits.c: Add z modifier to formats for WORD_BIT and
	LONG_BIT.

	* debug/backtrace-tst.c (compare): Add casts to avoid warnings.

	* test-skeleton.c: Mark local functions as static to avoid warnings.

2000-11-23  H.J. Lu  <hjl@gnu.org>

	* rt/tst-aio6.c (do_test): Use pipe instead of STDIN_FILENO to
	support the background job.
	Fix a typo.

2000-11-24  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_conf.c (insert_module): Replace old entry if new one
	has same names but lower cost.

2000-11-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/dl-machine.h: Ifdef out handling for relocs
	which never occur during bootstrap.
	* sysdeps/sparc/sparc64/dl-machine.h: Likewise.

2000-11-23  Andreas Jaeger  <aj@suse.de>

	* nss/nss_files/files-hosts.c: Remove getipnodebyname.

	* nss/Versions: Remove _nss_files_getipnodebyname_r.

	* sysdeps/unix/sysv/linux/Versions: Fix typo in last patch.

2000-11-18  Martin Buchholz  <martin@xemacs.org>

	* csu/gmon-start.c (__gmon_start__): Avoid over-clever trick `if
	(called++) return;'

2000-11-21  Alan Modra  <alan@linuxcare.com.au>

	* sysdeps/generic/bsd-_setjmp.c (setjmp): Rename to _setjmp.

	* csu/abi-note.S: Correct comment for operating system number.

2000-11-22  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.2.1 for glibc.

2000-11-22  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/syscalls.list: Add pivot_root.